Align issues

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -18,6 +18,10 @@
     margin: auto;
 }
 
+.htmlValidator, .cssValidator {
+    magin: auto;
+}
+
 li {
     padding-left: 30px;
     max-width: 600px;
